Implement login API and project structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+# Database configuration
+spring.sql.init.platform=mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/luci?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
+# JWT configuration
+com.lucistore.lucistorebe.security.jwt.secret=secret
+com.lucistore.lucistorebe.security.jwt.expiration-ms=86400000
+
+# Cloudinary configuration
+com.lucistore.lucistorebe.service.cloudinary.cloud-name=aaa
+com.lucistore.lucistorebe.service.cloudinary.api-key=aaa
+com.lucistore.lucistorebe.service.cloudinary.api-secret=aaa
+
+
+# Platform policy parameter
+com.lucistore.lucistorebe.policy.default-page-size=10
+com.lucistore.lucistorebe.policy.min-allowed-product-image=1
+com.lucistore.lucistorebe.policy.max-allowed-product-image=10
+com.lucistore.lucistorebe.policy.min-allowed-product-variation=1
+
+com.lucistore.lucistorebe.policy.minimum-password-length=8
