OTP service, Mail Sender service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,18 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Mail Sender config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=askjdzalsd@gmail.com
+spring.mail.password=lkboutxtdkktdyzu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Otp rule configuration
+com.lucistore.lucistorebe.security.otp.expired-after-mins=5
+com.lucistore.lucistorebe.security.otp.code-length=6
+
 # JWT configuration
 com.lucistore.lucistorebe.security.jwt.secret=secret
 com.lucistore.lucistorebe.security.jwt.expiration-ms=86400000
@@ -28,4 +40,3 @@ com.lucistore.lucistorebe.policy.min-allowed-product-image=1
 com.lucistore.lucistorebe.policy.max-allowed-product-image=10
 com.lucistore.lucistorebe.policy.min-allowed-product-variation=1
 
-com.lucistore.lucistorebe.policy.minimum-password-length=8
