Password reset API, login with OAuth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,13 +15,20 @@ spring.jpa.show-sql=true
 # Mail Sender config
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=askjdzalsd@gmail.com
-spring.mail.password=lkboutxtdkktdyzu
+spring.mail.username=hellonewday312@gmail.com
+spring.mail.password=bgmkdwximjiflkpv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# OAuth2 client configuration
+spring.security.oauth2.client.registration.google.client-id=111757035618-hn35nbtho40mq5hjlljhmhvm51a92obt.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+com.lucistore.lucistorebe.security.oauth2.fe-login-url=http://localhost:8080/api/login/oauth2
+
 # Otp rule configuration
-com.lucistore.lucistorebe.security.otp.expired-after-mins=5
+com.lucistore.lucistorebe.security.otp.expired-after-mins=1
 com.lucistore.lucistorebe.security.otp.code-length=6
 
 # JWT configuration
@@ -29,9 +36,9 @@ com.lucistore.lucistorebe.security.jwt.secret=secret
 com.lucistore.lucistorebe.security.jwt.expiration-ms=86400000
 
 # Cloudinary configuration
-com.lucistore.lucistorebe.service.cloudinary.cloud-name=aaa
-com.lucistore.lucistorebe.service.cloudinary.api-key=aaa
-com.lucistore.lucistorebe.service.cloudinary.api-secret=aaa
+com.lucistore.lucistorebe.service.cloudinary.cloud-name=dviyn9zyq
+com.lucistore.lucistorebe.service.cloudinary.api-key=271469785165875
+com.lucistore.lucistorebe.service.cloudinary.api-secret=GBkeb8UrS64QBlWpSBinwE2GbE4
 
 
 # Platform policy parameter
