--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,10 @@ com.lucistore.lucistorebe.service.cloudinary.cloud-name=dviyn9zyq
 com.lucistore.lucistorebe.service.cloudinary.api-key=271469785165875
 com.lucistore.lucistorebe.service.cloudinary.api-secret=GBkeb8UrS64QBlWpSBinwE2GbE4
 
+# Twilio configuration
+com.lucistore.lucistorebe.service.twilio.number=+15617832337
+com.lucistore.lucistorebe.service.twilio.account-sid=AC339fc58dc7482a5b9b5b1d56c4ec96f8
+com.lucistore.lucistorebe.service.twilio.auth-token=44da96d0c6740341ca6e5b24215a21cd
 
 # Platform policy parameter
 com.lucistore.lucistorebe.policy.default-page-size=10
