Momo and Paypal online payment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,6 +45,16 @@ com.lucistore.lucistorebe.service.twilio.number=+15617832337
 com.lucistore.lucistorebe.service.twilio.account-sid=AC339fc58dc7482a5b9b5b1d56c4ec96f8
 com.lucistore.lucistorebe.service.twilio.auth-token=44da96d0c6740341ca6e5b24215a21cd
 
+# Online payment service configuration
+com.lucistore.lucistorebe.service.payment.momo.secret-key=
+com.lucistore.lucistorebe.service.payment.momo.access-key=
+com.lucistore.lucistorebe.service.payment.momo.partner-code=
+com.lucistore.lucistorebe.service.payment.momo.url.payment-create=
+com.lucistore.lucistorebe.service.payment.momo.url.payment-confirm=
+
+com.lucistore.lucistorebe.service.payment.paypal.client-id=AXuFZeZpy-OsW0tQ6hQNvB83nPRb-B2Mco2Eve74tErFTfcy5tELOAqsdI2mw7cxegb9M-W0TPV2MQ_j
+com.lucistore.lucistorebe.service.payment.paypal.client-secret=EER3Xm9M2DnVUoCKs1AQstZdfUQtPE4ye83HXD4-z3zCTQ_3cE-c9BivoRpcPfkDiEq5jK-QQVc3U7Bc
+
 # Platform policy parameter
 com.lucistore.lucistorebe.policy.default-page-size=10
 com.lucistore.lucistorebe.policy.min-allowed-product-image=1
