--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
 			<version>9.0.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>checkout-sdk</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
 
 
 
