Fix bug in payment service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,14 +46,21 @@ com.lucistore.lucistorebe.service.twilio.account-sid=AC339fc58dc7482a5b9b5b1d56c
 com.lucistore.lucistorebe.service.twilio.auth-token=44da96d0c6740341ca6e5b24215a21cd
 
 # Online payment service configuration
-com.lucistore.lucistorebe.service.payment.momo.secret-key=
-com.lucistore.lucistorebe.service.payment.momo.access-key=
-com.lucistore.lucistorebe.service.payment.momo.partner-code=
-com.lucistore.lucistorebe.service.payment.momo.url.payment-create=
-com.lucistore.lucistorebe.service.payment.momo.url.payment-confirm=
+com.lucistore.lucistorebe.service.payment.return-url=http://localhost:8080/api/payment-return
+
+com.lucistore.lucistorebe.service.payment.momo.store-name=LUC Store
+com.lucistore.lucistorebe.service.payment.momo.secret-key=Ey1HsDNaQMmtyQHd3Q7XKrkXCPlEI6fC
+com.lucistore.lucistorebe.service.payment.momo.access-key=DWoBqBjYaSIWZ1as
+com.lucistore.lucistorebe.service.payment.momo.partner-code=MOMOQ5FR20220814
+com.lucistore.lucistorebe.service.payment.momo.url.payment-create=https://test-payment.momo.vn/v2/gateway/api/create
+com.lucistore.lucistorebe.service.payment.momo.url.payment-confirm=https://test-payment.momo.vn/v2/gateway/api/confirm
+com.lucistore.lucistorebe.service.payment.momo.url.payment-refund=https://test-payment.momo.vn/v2/gateway/api/refund
+com.lucistore.lucistorebe.service.payment.momo.url.notify=/api/payment/momo/notify
+com.lucistore.lucistorebe.service.payment.momo.url.callback=/api/payment/return/momo
 
 com.lucistore.lucistorebe.service.payment.paypal.client-id=AXuFZeZpy-OsW0tQ6hQNvB83nPRb-B2Mco2Eve74tErFTfcy5tELOAqsdI2mw7cxegb9M-W0TPV2MQ_j
 com.lucistore.lucistorebe.service.payment.paypal.client-secret=EER3Xm9M2DnVUoCKs1AQstZdfUQtPE4ye83HXD4-z3zCTQ_3cE-c9BivoRpcPfkDiEq5jK-QQVc3U7Bc
+com.lucistore.lucistorebe.service.payment.paypal.url.callback=/api/payment/return/paypal
 
 # Platform policy parameter
 com.lucistore.lucistorebe.policy.default-page-size=10
