--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 # Database configuration
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.sql.init.continue-on-error=true
 spring.sql.init.platform=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/luci?createDatabaseIfNotExist=true
@@ -11,6 +8,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=30MB
 
 # Mail Sender config
 spring.mail.host=smtp.gmail.com
